fix: heading line-height on mobile

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -28,7 +28,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 800;
   font-size: 1.6em;
-  line-height: 2.4em;
+  line-height: 1.7em;
 }
 
 .active {
